2008-02-28 Igor Zelmanovich <igorz@mainsoft.com>

	* Control.cs:
	fixed exception propagation in case of multiple control with same id
	were found.	 

2008-02-24  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* TemplateControl.jvm.cs: perforamce optimization in
	GetLocalResourceObject

2008-02-23  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Page.cs: fixed RegisterRequiresPostBack, no need to check presence of
	registered control, in casae of multiple registrations, will be 
	multiple calls of RaisePostDataChangedEvent, as in .net

2008-02-23  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Page.cs: reverted 96081

2008-02-18  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Page.cs: fixed RegisterRequiresPostBack, performance improvement

2008-02-12  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Page.jvm.cs: StateSerializer.readExternal and writeExternal fixed
	to support viewstate encryption

2008-02-12  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ObjectStateFormatter.cs: revert of 91820

2008-02-08  Marek Habersack  <mhabersack@novell.com>

	* SimpleWebHandlerParser.cs: always return a non-null value from
	the Program property.

	* TemplateParser.cs: make sure that the Src attribute is treated
	correctly in the 2.0 profile. Fixes bug #319016

2008-02-07  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Page.jvm.cs: added StateSerializer class, fixed processSaveState,
	processRestoreState

2008-02-07  Marek Habersack  <mhabersack@novell.com>

	* PageHandlerFactory.cs: call PageParser.GetCompiledPageInstance
	only - that method calls the appropriate APIs for 1.1 and 2.0
	profiles.

2008-02-06  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Control.cs: fixed ResolveClientUrlInternal for portal url prefixes

2008-02-04  Marek Habersack  <mhabersack@novell.com>

	* SimpleWebHandlerParser.cs: use WebEncoding.FileEncoding when
	reading the source file.

2008-01-30 Igor Zelmanovich <igorz@mainsoft.com>

	* ObjectStateFormatter.cs: 